CMakeLists.txt: add optimizations for release builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,25 @@ project(wasmdemo)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --target=wasm32")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -nostdlib")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdata-sections")
+add_compile_options(-Wall -Wextra -Werror)
+add_compile_options(--target=wasm32)
+add_compile_options(-nostdlib)
+add_compile_options(-fvisibility=hidden)
+add_compile_options($<$<CONFIG:Release>:-ffunction-sections>)
+add_compile_options($<$<CONFIG:Release>:-fdata-sections>)
+add_compile_options($<$<CONFIG:Release>:-flto>)
 
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-entry")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--lto-O2")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--strip-all")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--export-dynamic")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
+add_link_options(-Wall -Wextra -Werror)
+add_link_options(--target=wasm32)
+add_link_options(-nostdlib)
+add_link_options(-fvisibility=hidden)
+add_link_options(-Wl,--no-entry)
+add_link_options(-Wl,--export-dynamic)
+add_link_options($<$<CONFIG:Release>:-ffunction-sections>)
+add_link_options($<$<CONFIG:Release>:-fdata-sections>)
+add_link_options($<$<CONFIG:Release>:-flto>)
+add_link_options($<$<CONFIG:Release>:-Wl,--lto-O2>)
+add_link_options($<$<CONFIG:Release>:-Wl,--strip-all>)
+add_link_options($<$<CONFIG:Release>:-Wl,--gc-sections>)
 
 add_executable(wasmdemo wasmdemo.cc)
