--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,57 +65,4 @@ target_include_directories(
   "${CMAKE_CURRENT_LIST_DIR}/include"
 )
 
-find_package (Python3 COMPONENTS Interpreter)
-if(NOT Python3_FOUND)
-  message(FATAL_ERROR "Unable to find a Python3 interpreter")
-endif()
-
-if(WASMDEMO_CLANG_TARGET_WASM32)
-  add_custom_command(
-    OUTPUT
-      "${CMAKE_CURRENT_BINARY_DIR}/index.js"
-    COMMAND
-      "${Python3_EXECUTABLE}"
-      "${CMAKE_CURRENT_LIST_DIR}/generate_index_js.py"
-      index.js
-      "${CMAKE_CURRENT_LIST_DIR}/index.js"
-      $<TARGET_FILE:wasmdemo>
-    MAIN_DEPENDENCY
-      "${CMAKE_CURRENT_LIST_DIR}/index.js"
-    DEPENDS
-      "${CMAKE_CURRENT_LIST_DIR}/generate_index_js.py"
-      "${Python3_EXECUTABLE}"
-      $<TARGET_FILE:wasmdemo>
-    COMMENT
-      "Generating ${CMAKE_CURRENT_BINARY_DIR}/index.js"
-  )
-
-  add_custom_target(
-    generate_index_js
-    ALL
-    DEPENDS
-      "${CMAKE_CURRENT_BINARY_DIR}/index.js"
-  )
-
-  add_custom_command(
-    OUTPUT
-      "${CMAKE_CURRENT_BINARY_DIR}/index.html"
-    COMMAND
-      "${CMAKE_COMMAND}"
-      -E
-      copy
-      "${CMAKE_CURRENT_LIST_DIR}/index.html"
-      "${CMAKE_CURRENT_BINARY_DIR}/index.html"
-    MAIN_DEPENDENCY
-      "${CMAKE_CURRENT_LIST_DIR}/index.html"
-    COMMENT
-      "Copying index.html to ${CMAKE_CURRENT_BINARY_DIR}"
-  )
-
-  add_custom_target(
-    copy_index_html
-    ALL
-    DEPENDS
-      "${CMAKE_CURRENT_BINARY_DIR}/index.html"
-  )
-endif()
+add_subdirectory(www)
