CMakeLists.txt: add some log messages about cmake itself

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: Using cmake version ${CMAKE_VERSION}: ${CMAKE_COMMAND}")
+
 project(wasmdemo)
+
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
