--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,12 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# By default, build the wasm32 target.
-# But also allow building for the native platform, to enable running the
-# unit tests.
-set(WASMDEMO_CLANG_TARGET "wasm32" CACHE STRING
-  "The target architecture to build for. Must be either 'wasm32' or 'native'."
-)
-if(WASMDEMO_CLANG_TARGET STREQUAL "wasm32")
-  set(WASMDEMO_CLANG_TARGET_WASM32 YES)
-  set(WASMDEMO_CLANG_TARGET_NATIVE NO)
+# Set WASMDEMO_TARGET_WASM32 to YES if the build is targeting WebAssembly or
+# NO if targeting any other platform (e.g. desktop).
+if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "wasm32")
+  set(WASMDEMO_TARGET_WASM32 YES)
 elseif(WASMDEMO_CLANG_TARGET STREQUAL "native")
-  set(WASMDEMO_CLANG_TARGET_WASM32 NO)
-  set(WASMDEMO_CLANG_TARGET_NATIVE YES)
-else()
-  message(FATAL_ERROR "Invalid value for WASMDEMO_CLANG_TARGET: ${WASMDEMO_CLANG_TARGET}")
+  set(WASMDEMO_TARGET_WASM32 NO)
 endif()
 
 set(WASMDEMO_WARNING_FLAGS
@@ -44,9 +36,7 @@ set(WASMDEMO_WARNING_FLAGS
 )
 
 add_compile_options(${WASMDEMO_WARNING_FLAGS})
-if(WASMDEMO_CLANG_TARGET_WASM32)
-  add_compile_options(--target=wasm32)
-  add_compile_options(-nostdlib)
+if(WASMDEMO_TARGET_WASM32)
   add_compile_options(-fvisibility=hidden)
   add_compile_options($<$<CONFIG:Release>:-ffunction-sections>)
   add_compile_options($<$<CONFIG:Release>:-fdata-sections>)
@@ -54,9 +44,7 @@ if(WASMDEMO_CLANG_TARGET_WASM32)
 endif()
 
 add_link_options(${WASMDEMO_WARNING_FLAGS})
-if(WASMDEMO_CLANG_TARGET_WASM32)
-  add_link_options(--target=wasm32)
-  add_link_options(-nostdlib)
+if(WASMDEMO_TARGET_WASM32)
   add_link_options(-fvisibility=hidden)
   add_link_options($<$<CONFIG:Release>:-ffunction-sections>)
   add_link_options($<$<CONFIG:Release>:-fdata-sections>)
@@ -68,6 +56,6 @@ endif()
 
 add_subdirectory(cpp)
 
-if(WASMDEMO_CLANG_TARGET_WASM32)
+if(WASMDEMO_TARGET_WASM32)
   add_subdirectory(www)
 endif()
