--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,5 +1,11 @@
+set(
+  wasmdemo_srcs
+  src/wasmdemo.cc
+  src/hash.cc
+)
+
 if(WASMDEMO_TARGET_WASM32)
-  add_executable(wasmdemo src/wasmdemo.cc)
+  add_executable(wasmdemo ${wasmdemo_srcs})
   set_property(TARGET wasmdemo PROPERTY OUTPUT_NAME wasmdemo.wasm)
 
   target_include_directories(
@@ -8,7 +14,7 @@ if(WASMDEMO_TARGET_WASM32)
     "${CMAKE_CURRENT_LIST_DIR}/include/wasm32"
   )
 else()
-  add_library(wasmdemo src/wasmdemo.cc)
+  add_library(wasmdemo ${wasmdemo_srcs})
 
   target_include_directories(
     wasmdemo
@@ -16,3 +22,9 @@ else()
     "${CMAKE_CURRENT_LIST_DIR}/include/nonwasm32"
   )
 endif()
+
+target_include_directories(
+  wasmdemo
+  PRIVATE
+  "${CMAKE_CURRENT_LIST_DIR}/include/common"
+)
