--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -28,3 +28,15 @@ target_include_directories(
   PRIVATE
   "${CMAKE_CURRENT_LIST_DIR}/include/common"
 )
+
+target_compile_options(
+  wasmdemo
+  PRIVATE
+  -Werror
+)
+
+target_link_options(
+  wasmdemo
+  PRIVATE
+  -Werror
+)
