--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Set WASMDEMO_TARGET_WASM32 to YES if the build is targeting WebAssembly or
-# NO if targeting any other platform (e.g. desktop).
 if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "wasm32")
   set(WASMDEMO_TARGET_WASM32 YES)
-elseif(WASMDEMO_CLANG_TARGET STREQUAL "native")
+else()
   set(WASMDEMO_TARGET_WASM32 NO)
 endif()
 
@@ -36,7 +34,6 @@ set(WASMDEMO_WARNING_FLAGS
 
 add_compile_options(${WASMDEMO_WARNING_FLAGS})
 if(WASMDEMO_TARGET_WASM32)
-  add_compile_options(-fvisibility=hidden)
   add_compile_options($<$<CONFIG:Release>:-ffunction-sections>)
   add_compile_options($<$<CONFIG:Release>:-fdata-sections>)
   add_compile_options($<$<CONFIG:Release>:-flto>)
@@ -44,7 +41,6 @@ endif()
 
 add_link_options(${WASMDEMO_WARNING_FLAGS})
 if(WASMDEMO_TARGET_WASM32)
-  add_link_options(-fvisibility=hidden)
   add_link_options($<$<CONFIG:Release>:-ffunction-sections>)
   add_link_options($<$<CONFIG:Release>:-fdata-sections>)
   add_link_options($<$<CONFIG:Release>:-flto>)
@@ -53,10 +49,15 @@ if(WASMDEMO_TARGET_WASM32)
   add_link_options($<$<CONFIG:Release>:-Wl,--gc-sections>)
 endif()
 
+if(WASMDEMO_TARGET_WASM32)
+  add_compile_definitions(GTEST_HAS_EXCEPTIONS=0)
+  add_compile_definitions(GTEST_HAS_STREAM_REDIRECTION=0)
+  set(gtest_disable_pthreads YES CACHE BOOL "Disable pthreads in googletest" FORCE)
+endif()
+
 add_subdirectory(cpp)
+add_subdirectory(external)
 
 if(WASMDEMO_TARGET_WASM32)
   add_subdirectory(www)
-else()
-  add_subdirectory(external)
 endif()
