--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,62 +1,74 @@
-set(
-  wasmdemo_srcs
+add_library(
+  wasmdemo_lib
+  OBJECT
   src/wasmdemo.cc
   src/hash.cc
   src/bloom.cc
 )
 
-if(WASMDEMO_TARGET_WASM32)
-  add_executable(wasmdemo ${wasmdemo_srcs})
-  set_property(TARGET wasmdemo PROPERTY OUTPUT_NAME wasmdemo.wasm)
-
-  target_include_directories(
-    wasmdemo
-    PRIVATE
-    "${CMAKE_CURRENT_LIST_DIR}/include/wasm32"
-  )
-else()
-  add_library(wasmdemo ${wasmdemo_srcs})
-
-  target_include_directories(
-    wasmdemo
-    PUBLIC
-    "${CMAKE_CURRENT_LIST_DIR}/include/nonwasm32"
-  )
-
-  add_executable(
-    wasmdemo_test
-    test/wasmdemo_imports_impl.cc
-    test/wasmdemo_test.cc
-  )
-
-  target_include_directories(
-    wasmdemo_test
-    PUBLIC
-    "${CMAKE_CURRENT_LIST_DIR}/test"
-  )
-
-  target_link_libraries(
-    wasmdemo_test
-    PRIVATE
-    wasmdemo
-    gmock_main
-  )
-endif()
-
-target_include_directories(
-  wasmdemo
-  PUBLIC
-  "${CMAKE_CURRENT_LIST_DIR}/include/common"
-)
-
 target_compile_options(
-  wasmdemo
+  wasmdemo_lib
   PRIVATE
   -Werror
 )
 
 target_link_options(
-  wasmdemo
+  wasmdemo_lib
   PRIVATE
   -Werror
+)
+
+target_include_directories(
+  wasmdemo_lib
+  PUBLIC
+  "${CMAKE_CURRENT_LIST_DIR}/include/common"
+)
+
+if(WASMDEMO_TARGET_WASM32)
+  target_include_directories(
+    wasmdemo_lib
+    PUBLIC
+    "${CMAKE_CURRENT_LIST_DIR}/include/wasm32"
+  )
+else()
+  target_include_directories(
+    wasmdemo_lib
+    PUBLIC
+    "${CMAKE_CURRENT_LIST_DIR}/include/nonwasm32"
+  )
+endif()
+
+if(WASMDEMO_TARGET_WASM32)
+  add_executable(wasmdemo src/wasmdemo_main.cc)
+  set_property(TARGET wasmdemo PROPERTY OUTPUT_NAME wasmdemo.wasm)
+  target_link_libraries(
+    wasmdemo
+    PUBLIC
+    wasmdemo_lib
+  )
+  target_link_options(
+    wasmdemo
+    PUBLIC
+    "-nostartfiles"
+    "-Wl,--no-entry"
+  )
+endif()
+
+add_executable(
+  wasmdemo_test
+  test/wasmdemo_imports_impl.cc
+  test/wasmdemo_test.cc
+)
+
+target_include_directories(
+  wasmdemo_test
+  PUBLIC
+  "${CMAKE_CURRENT_LIST_DIR}/test"
+)
+
+target_link_libraries(
+  wasmdemo_test
+  PRIVATE
+  wasmdemo_lib
+  gmock_main
 )
