Apply patch to googletest to disable -fexception

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -18,6 +18,14 @@ function(
   ARG_DOWNLOAD_URL
   ARG_EXPECTED_SHA256
 )
+  cmake_parse_arguments(
+    PARSE_ARGV 0
+    "ARG" # <prefix>
+    "" # <options>
+    "" # <one_value_keywords>
+    "PATCHES" # <multi_value_keywords>
+  )
+
   if("${ARG_PACKAGE_NAME}" STREQUAL "")
     message(FATAL_ERROR "ARG_PACKAGE_NAME must be specified to ${CMAKE_CURRENT_FUNCTION}")
   endif()
@@ -52,9 +60,18 @@ function(
     "${ARG_PACKAGE_VERSION}"
     "${ARG_DOWNLOAD_URL_FIXED}"
     "${ARG_EXPECTED_SHA256}"
-    "--patch_executable=${Patch_EXECUTABLE}"
     "${PACKAGE_DEST_DIR}"
+    "--patch_executable=${Patch_EXECUTABLE}"
   )
+
+  foreach(patch_file ${ARG_PATCHES})
+    list(
+      APPEND
+      DEP_SETUP_PY_ARGS
+      "--patch"
+      "${patch_file}"
+    )
+  endforeach()
 
   string(JOIN " " DEP_SETUP_PY_ARGS_STR ${DEP_SETUP_PY_ARGS})
   message(
@@ -130,10 +147,21 @@ set(
 )
 
 if(BUILD_TESTING)
+  if(WASMDEMO_TARGET_WASM32)
+    set(
+      googletest_dep_setup_extra_args
+      "PATCHES"
+      "${CMAKE_CURRENT_LIST_DIR}/googletest.noexceptions.patch.txt"
+    )
+  else()
+    set(googletest_dep_setup_extra_args "")
+  endif()
+
   dep_setup(
     "googletest"
     "97459e54ec4f1882d219c413c929f719d9741ada"
     "https://github.com/google/googletest/archive/__PACKAGE_VERSION__.zip"
     "af17569ac5c05b148ae336a43ae7ab144d2cc5f3bfd3c9beb952cdd9a9fb0f75"
+    ${googletest_dep_setup_extra_args}
   )
 endif()
