--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -12,10 +12,13 @@ jobs:
           python-version: 3.9
 
       - name: Install Prerequisites
-        run: sudo apt-get install cmake
-        run: sudo apt-get install ninja
+        run: sudo apt-get install cmake ninja
 
-      - name: Build (Debug)
-        run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Debug
-        run: cmake --build build --verbose
-        run: cd build && ctest --verbose
+      - name: Cmake Configure (Debug)
+        run: cmake -S . -B build_debug -G Ninja -DCMAKE_BUILD_TYPE=Debug
+
+      - name: Cmake Build (Debug)
+        run: cmake --build build_debug --verbose
+
+      - name: CTest (Debug)
+        run: ctest --test-dir build_debug --verbose
