--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -12,7 +12,7 @@ jobs:
           python-version: 3.9
 
       - name: Install Prerequisites
-        run: sudo apt-get install cmake ninja
+        run: sudo apt-get install cmake ninja-build
 
       - name: Cmake Configure (Debug)
         run: cmake -S . -B build_debug -G Ninja -DCMAKE_BUILD_TYPE=Debug
