--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ message(STATUS "${CMAKE_CURRENT_LIST_FILE}: Using cmake version ${CMAKE_VERSION}
 
 project(wasmdemo)
 
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_COMMAND=${CMAKE_COMMAND}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_VERSION=${CMAKE_VERSION}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
 
