--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -4,7 +4,17 @@ on: [pull_request]
 
 jobs:
   build_and_test_desktop:
+    name: build_and_test_desktop_${{ matrix.config.build_type }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config:
+          - {
+            build_type: "Debug"
+          }
+          - {
+            build_type: "Release"
+          }
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
@@ -14,17 +24,17 @@ jobs:
       - name: Install Prerequisites
         run: sudo apt-get install cmake ninja-build
 
-      - name: Cmake Configure (Debug)
-        run: cmake -S . -B build_debug -G Ninja -DCMAKE_BUILD_TYPE=Debug
+      - name: Cmake Configure
+        run: CC=clang CXX=clang++ cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
-      - name: Cmake Build (Debug)
-        run: cmake --build build_debug --verbose
+      - name: Cmake Build
+        run: cmake --build build --verbose
 
-      - name: CTest (Debug)
-        run: ctest --test-dir build_debug --verbose
+      - name: CTest
+        run: ctest --test-dir build --verbose
 
       - uses: actions/upload-artifact@v3
         with:
           name: build_output
           path: |
-            build_debug/cpp/wasmdemo_test
+            build/cpp/wasmdemo_test
