--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -2,6 +2,10 @@ name: wasmdemo
 
 on: [pull_request]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build_and_test_desktop:
     name: build_and_test_desktop_${{ matrix.config.build_type }}
