--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,13 @@ project(wasmdemo)
 
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_COMMAND=${CMAKE_COMMAND}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_VERSION=${CMAKE_VERSION}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_GENERATOR=${CMAKE_GENERATOR}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_MAKE_PROGRAM=${CMAKE_MAKE_PROGRAM}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}")
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
