Revert "Remove the install steps for cmake and ninja, since they are already present on the runners."
This reverts commit 8009d9d512d80a5b518d6e8f6dc126e688e58d86.

--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Install Prerequisites
+        run: sudo apt-get install cmake ninja-build
+
       - name: Cmake Configure
         run: CC=clang CXX=clang++ cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
