--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_GENERATOR=${CMAKE_GENERATOR}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_MAKE_PROGRAM=${CMAKE_MAKE_PROGRAM}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}")
 message(STATUS "${CMAKE_CURRENT_LIST_FILE}: CMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: WASM32_CLANG_ROOT=${WASM32_CLANG_ROOT}")
+message(STATUS "${CMAKE_CURRENT_LIST_FILE}: WASMDEMO_WASMTIME_EXECUTABLE=${WASMDEMO_WASMTIME_EXECUTABLE}")
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
