add missing backslash

--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -68,7 +68,7 @@ jobs:
             -B build \
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
-            -DCMAKE_C_COMPILER_LAUNCHER=ccache
+            -DCMAKE_C_COMPILER_LAUNCHER=ccache \
             -G Ninja
 
       - name: cmake Configure (wasm32)
@@ -81,7 +81,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DCMAKE_TOOLCHAIN_FILE=wasm32.toolchain.cmake \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
-            -DCMAKE_C_COMPILER_LAUNCHER=ccache
+            -DCMAKE_C_COMPILER_LAUNCHER=ccache \
             -G Ninja
 
       - name: cmake --build
