--- a/.github/workflows/presubmits.yml
+++ b/.github/workflows/presubmits.yml
@@ -44,7 +44,7 @@ jobs:
         shell: bash
         run: exec ccache --show-config
       
-      - name: cache ccache directory
+      - name: actions/cache for ccache
         uses: actions/cache@v3
         with:
           path: ccache_cache
@@ -54,7 +54,7 @@ jobs:
             build_${{ matrix.target_arch }}_${{ matrix.build_type }}_${{ github.run_id }}_
             build_${{ matrix.target_arch }}_${{ matrix.build_type }}_
 
-      - name: cache wasi-sdk
+      - name: actions/cache for wasi-sdk
         if: matrix.target_arch == 'wasm32'
         uses: actions/cache@v3
         with:
@@ -70,7 +70,7 @@ jobs:
             wget --progress=dot:giga https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-17/wasi-sdk-17.0-linux.tar.gz
           fi
           tar xf wasi-sdk-17.0-linux.tar.gz
-          export WASM32_CLANG_ROOT=$(readlink -f wasi-sdk-17.0)
+          export WASM32_CLANG_ROOT="$PWD/wasi-sdk-17.0"
           echo WASM32_CLANG_ROOT=${WASM32_CLANG_ROOT}
           if [[ ! -e ${WASM32_CLANG_ROOT} ]] ; then
             echo "ERROR: WASM32_CLANG_ROOT not found: ${WASM32_CLANG_ROOT}"
@@ -78,7 +78,7 @@ jobs:
           fi
           echo "WASM32_CLANG_ROOT=${WASM32_CLANG_ROOT}" >>${GITHUB_ENV}
 
-      - name: cache wasmtime
+      - name: actions/cache for wasmtime
         if: matrix.target_arch == 'wasm32'
         uses: actions/cache@v3
         with:
@@ -94,7 +94,7 @@ jobs:
             wget --progress=dot:giga https://github.com/bytecodealliance/wasmtime/releases/download/v3.0.1/wasmtime-v3.0.1-x86_64-linux.tar.xz
           fi
           tar xf wasmtime-v3.0.1-x86_64-linux.tar.xz
-          export WASMDEMO_WASMTIME_EXECUTABLE=$(readlink -f wasmtime-v3.0.1-x86_64-linux/wasmtime)
+          export WASMDEMO_WASMTIME_EXECUTABLE="$PWD/wasmtime-v3.0.1-x86_64-linux/wasmtime"
           echo WASMDEMO_WASMTIME_EXECUTABLE=${WASMDEMO_WASMTIME_EXECUTABLE}
           if [[ ! -e ${WASMDEMO_WASMTIME_EXECUTABLE} ]] ; then
             echo "ERROR: WASMDEMO_WASMTIME_EXECUTABLE not found: ${WASMDEMO_WASMTIME_EXECUTABLE}"
@@ -102,7 +102,7 @@ jobs:
           fi
           echo "WASMDEMO_WASMTIME_EXECUTABLE=${WASMDEMO_WASMTIME_EXECUTABLE}" >>${GITHUB_ENV}
 
-      - name: cmake Configure (linux)
+      - name: cmake configure (linux)
         if: matrix.target_arch == 'linux'
         shell: bash
         run: |
@@ -115,7 +115,7 @@ jobs:
             -DCMAKE_C_COMPILER_LAUNCHER=ccache \
             -G Ninja
 
-      - name: cmake Configure (wasm32)
+      - name: cmake configure (wasm32)
         if: matrix.target_arch == 'wasm32'
         shell: bash
         run: |
@@ -136,10 +136,12 @@ jobs:
         shell: bash
         run: cd build && exec ctest --tests-regex wasmdemo --verbose
 
-      - name: ccache statistics
+      - name: ccache --show-stats
         continue-on-error: true
         shell: bash
-        run: |
-          ccache --show-stats -v -v
-          ccache --show-config
-          ccache --show-compression
+        run: exec ccache --show-stats -v -v
+
+      - name: ccache --show-compression
+        continue-on-error: true
+        shell: bash
+        run: exec ccache --show-compression
